fix alignment

--- a/src/components/header/header-style.css
+++ b/src/components/header/header-style.css
@@ -40,3 +40,7 @@
   .avatar > img{
     margin-right: 8px;
   }  
+
+  .no-underline{
+    text-decoration: none;
+  }
